<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarcolor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:text="@string/create_geowod"
            android:id="@+id/textView8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:id="@+id/btncreate"
            android:layout_toRightOf="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btncancel"
            android:layout_toLeftOf="@+id/textView8"
            android:layout_toStartOf="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/back_color"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/amrap_relative_alyout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/amraptxtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/amrap"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amrapLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@color/header_color"
                android:gravity="bottom" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:id="@+id/fortime_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/forTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/for_time"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fortimeLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@color/header_color"
                android:text="In Progress"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:id="@+id/intervals_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/intervalsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/intervals"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intervalsLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@color/header_color"
                android:text="In Progress"
                android:visibility="invisible" />
        </RelativeLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />


    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@color/whitecolor"
        android:visibility="gone"/>

    <include layout="@layout/amrap_time_intervals"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/back_color"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/amrap_L_layout"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit_workout"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/toolbarcolor"
            android:textColor="#fff"
            android:id="@+id/SubmitWorkout_btn"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>


    <!--<include
        layout="@layout/camera_fragment"/>-->

</LinearLayout>
</ScrollView>